--- a/css/colors.css
+++ b/css/colors.css
@@ -5,11 +5,11 @@
 }
 
 body {
-  background-color: lightskyblue;
+  background-color: cornflowerblue;
 }
 
 .envelope {
-  max-width: 320px;
+  max-width: 325px;
   width: 100%;
   margin: 0 auto;
   margin-top: 10px;
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 35px;
   margin-top: 25px;
   text-align: center;
   color: white;
@@ -25,7 +25,7 @@ h1 {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 31px;
   margin-bottom: 25px;
   text-align: center;
   color: blue;
@@ -33,8 +33,8 @@ h2 {
 }
 
 img {
-  width: 75px;
-  height: 75px;
+  width: 77px;
+  height: 77px;
   border-radius: 50%;
   height: auto;
 }
@@ -46,9 +46,9 @@ img {
 }
 
 .field {
-  width: 75px;
+  width: 77px;
   margin: 1px;
-  height: 75px;
+  height: 77px;
   border-radius: 50%;
   float: left;
   cursor: pointer;
@@ -65,8 +65,8 @@ img {
 
 .front {
   background-image: radial-gradient(blue, yellow, red, blue, blue, blue);
-  width: 75px;
-  height: 75px;
+  width: 77px;
+  height: 77px;
   border-radius: 50%;
   z-index: 2;
   transform: rotateY(0deg);
@@ -91,7 +91,7 @@ img {
 }
 
 .result p {
-  font-size: 46px;
+  font-size: 45px;
   font-family: cursive;
   color: greenyellow;
 }
