--- a/css/puzzle.css
+++ b/css/puzzle.css
@@ -5,13 +5,14 @@
 }
 
 body {
-  background: orange;
+  background: cornflowerblue;
 }
 
-h3 {
-  margin: 25px auto;
+h1 {
+  margin-top: 25px;
+  margin-bottom: 5px;
   text-align: center;
-  color: blue;
+  color: orange;
 }
 
 .panel {
@@ -20,6 +21,7 @@ h3 {
   flex-wrap: wrap;
   width: 335px;
   margin: auto;
+  border: solid 2.5px cornsilk;
 }
 
 .tiles {
@@ -27,7 +29,7 @@ h3 {
   text-align: center;
   width: 110px;
   height: 110px;
-  border: solid 2px black;
+  border: solid 1.35px cornsilk;
   cursor: pointer;
   color: rgba(0, 0, 0, 0);
   background: url(../assets/puzzle.jpg);
