--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  color: white;
+  text-shadow: 0.9px 0.9px 0.9px black;
+}
+
 h5 {
   font-weight: 500;
   text-align: center;
