--- a/css/colors.css
+++ b/css/colors.css
@@ -20,16 +20,16 @@ h1 {
   font-size: 35px;
   margin-top: 25px;
   text-align: center;
-  color: white;
-  text-shadow: 0 0 15px blue;
+  color: orange;
+  text-shadow: 1px 1px 1px black;
 }
 
 h2 {
   font-size: 31px;
   margin-bottom: 25px;
   text-align: center;
-  color: blue;
-  text-shadow: 0 0 1px blue;
+  color: orange;
+  text-shadow: 1px 1px 1px black;
 }
 
 img {
