--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,16 @@ body,
   line-height: 1.8;
 }
 
+h1 {
+  margin: 35px;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    margin: 10px;
+  }
+}
+
 h3 {
   font-weight: 700;
   color: red;
@@ -21,7 +31,7 @@ h3 {
 
 h4 {
   color: white;
-  text-shadow: 0.9px 0.9px 0.9px black;
+  text-shadow: 1px 1px 1px black;
 }
 
 h5 {
@@ -32,8 +42,7 @@ h5 {
 }
 
 .jumbotron {
-  margin-top: 19px;
-  height: 381px;
+  margin-top: 1px;
   background-color: white;
 }
 
@@ -42,7 +51,7 @@ h5 {
 }
 
 section {
-  margin-top: 95px;
+  margin-top: 115px;
   padding: 5px;
 }
 
